fix(style): make topbar visible in light theme & use currentColor
Tweakes the layouts to inline the SVG file to apply styles to the logo.
Requires that the logo is indeed a valid SVG file.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -136,7 +136,7 @@ dl.copyable{
             font-size: 3rem;
             color: white;
 
-            img {
+            img, svg {
                 height: 3rem;
             }
 
