--- a/resources/sass/navs/_sidebar.scss
+++ b/resources/sass/navs/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-    
+
     width: $sidebar-base-width;
     height: 100%;
     min-height: 100vh;
@@ -16,7 +16,7 @@
 
         background: transparent;
         display: none;
-        
+
         i{
             font-size: 1.4rem;
             padding: 0.5rem;
@@ -54,9 +54,10 @@
             img, svg {
                 height: 2em;
                 width: 2em;
+                color: #ffffff;
             }
             svg {
-                fill: var(--color-primary);
+                fill: var(--color-sidebar-text);
             }
         }
         &-text {
@@ -64,7 +65,7 @@
             text-align: left;
             line-height: 1.125rem;
             display: inline;
-            color: var(--color-sidebar-text) !important;
+            color: var(--color-sidebar-text);
         }
 
         &-topbar{
@@ -102,7 +103,7 @@
 
             z-index: 1;
             margin: 0;
-            
+
             .collapse-inner {
                 .collapse-item {
                     font-size: 0.85rem;
@@ -129,7 +130,7 @@
             padding: 0.75rem 0;
 
             color: rgba(255, 255, 255, 0.8);
- 
+
             &:active,
             &:focus,
             &:hover {
@@ -201,7 +202,7 @@
     }
 }
 
-@include media-breakpoint-down(lg) { 
+@include media-breakpoint-down(lg) {
     .sidebar {
         width: 100vw;
         height: 100vh;
