--- a/resources/sass/navs/_topbar.scss
+++ b/resources/sass/navs/_topbar.scss
@@ -6,6 +6,19 @@
     &-justify{
         &-moderator{
             justify-content: space-between;
+
+
+            & .sidebar-brand {
+                &-icon {
+                    svg {
+                        color: var(--color-body);
+                    }
+                }
+
+                &-text {
+                    color: var(--color-body);
+                }
+            }
         }
 
         &-user{
@@ -46,7 +59,7 @@
         }
     }
 
-    .dropdown { 
+    .dropdown {
         position: static;
     }
 
@@ -133,7 +146,7 @@
             width: 50vw;
             border-bottom: 1px solid var(--color-darkblue);
         }
-        
+
     }
 
     &-input{
@@ -151,7 +164,7 @@
         i{
             padding-top: 1.125rem;
             padding-left: 1rem;
-        }   
+        }
     }
 
     &-spinner{
